@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: hostares.c,v 1.50 2009-04-21 11:46:16 yangtse Exp $
+ * $Id: hostares.c,v 1.51 2009-09-11 02:33:06 gknauf Exp $
  ***************************************************************************/
 
 #include "setup.h"
@@ -169,10 +169,14 @@ static int ares_waitperform(struct connectdata *conn, int timeout_ms)
   else {
     /* move through the descriptors and ask for processing on them */
     for(i=0; i < num; i++)
+      /*
+       * Following the advice from:
+       * http://lists.danga.com/pipermail/memcached/2003-October/000336.html
+       */
       ares_process_fd(data->state.areschannel,
-                      pfd[i].revents & (POLLRDNORM|POLLIN)?
+                      pfd[i].revents & (POLLRDNORM|POLLIN|POLLERR|POLLHUP)?
                       pfd[i].fd:ARES_SOCKET_BAD,
-                      pfd[i].revents & (POLLWRNORM|POLLOUT)?
+                      pfd[i].revents & (POLLWRNORM|POLLOUT|POLLERR)?
                       pfd[i].fd:ARES_SOCKET_BAD);
   }
   return nfds;
